syntax = "proto2";
package task;

//用来表示网络结构
//层的数量，超参数有哪些，具体有哪些层
message NetworkStruct{
	optional uint32 nums_layers = 1;
	optional HyperParameter hparameter = 2;
	repeated Layer layers = 100;
}

//表示神经网络层
//知道输出规模，输入规模，该层的name，激活函数是什么，有哪些参数
message Layer{
	optional TensorInfo input_shape = 1;
	optional TensorInfo output_shape = 2;
	optional string name = 3;
	optional string activation = 4;
	repeated Parameter parameter_list = 100;
}

message Parameter{
	optional string key = 1;
	optional TensorInfo tensor_info = 2;
}

message TensorInfo{
	optional string data_type = 1;
	optional uint32 dim = 2;
	repeated uint32 shape = 3;
}

message HyperParameter{
  optional string optimizer = 1;
  optional float learning_rate = 2;
  optional uint32 mini_batch_size = 3;
  optional uint32 epoch = 4;
  optional string loss = 5;
  optional string consistency = 6;
}
